# sbdt

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt  example_pycall.py  requirements.txt  setup.py
code/cpp_gbdt/: CMakeLists.txt
code/cpp_gbdt/cmake/: download_datasets.cmake  libsbdt.cmake  run_example.cmake
